Added color cycle tracking feature

--- a/public/index.html
+++ b/public/index.html
@@ -109,13 +109,15 @@
     </div>
 
     <script src="../services/grid.js"></script>
-    <!-- <script src="./cyclicPathTrace.js"></script> -->
     <script src="../services/cycleValidation.js"></script>
     <!-- <script src="./sheetsHandling.js"></script> -->
     <script src="../services/cell-properties.js"></script>
+    <script src="../services/cyclicPathTrace.js"></script>
+
+    
     <script src="../services/formula.js"></script>
     <!-- <script src="./cutCopyPaste.js"></script> -->
     <!-- <script src="./openSave.js"></script> -->
-
+ 
 </body>
 </html>
