Added multiple sheet UI

--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,9 @@
             </span>
         </div>
         <div class="sheets-folder-cont">
-            <div class="sheet-folder">Sheet 1</div>
+            <div id="0" class="sheet-folder">
+                <div class="sheet-content">Sheet 1</div>
+            </div>
         </div>
     </div>
     <!-- Modal -->
@@ -115,11 +117,9 @@
     <script src="../services/grid.js"></script>
     <script src = "../utils/confirmMsg.js"></script>
     <script src="../services/cycleValidation.js"></script>
-    <!-- <script src="./sheetsHandling.js"></script> -->
+    <script src="../services/sheetsHandling.js"></script>
     <script src="../services/cell-properties.js"></script>
     <script src="../services/cyclicPathTrace.js"></script>
-
-    
     <script src="../services/formula.js"></script>
     <!-- <script src="./cutCopyPaste.js"></script> -->
     <!-- <script src="./openSave.js"></script> -->
