Added multiple sheet handling feature and sheet removal

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./style.css"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <title>Excel</title>
+    <title>Excel Book</title>
 </head>
 <body>
     <div class="page-action-cont">
@@ -96,9 +96,7 @@
             </span>
         </div>
         <div class="sheets-folder-cont">
-            <div id="0" class="sheet-folder">
-                <div class="sheet-content">Sheet 1</div>
-            </div>
+             
         </div>
     </div>
     <!-- Modal -->
