Copy the range of cells added

--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
     <script src="../services/cell-properties.js"></script>
     <script src="../services/cyclicPathTrace.js"></script>
     <script src="../services/formula.js"></script>
-    <!-- <script src="./cutCopyPaste.js"></script> -->
+    <script src="../services/cutCopyPaste.js"></script>
     <!-- <script src="./openSave.js"></script> -->
  
 </body>
