Added download feature of sheet

--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,8 @@
     <script src="../services/cyclicPathTrace.js"></script>
     <script src="../services/formula.js"></script>
     <script src="../services/cutCopyPaste.js"></script>
-    <!-- <script src="./openSave.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
+    <script src="../services/openSave.js"></script>
  
 </body>
 </html>
