Basic UI improved

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="page-action-cont">
         <div class="page-action">Home</div>
-        <div class="page-action">File</div>
+        <div class="page-action selected-page-action">File</div>
         <div class="page-action">Insert</div>
         <div class="page-action">Layout</div>
         <div class="page-action">Help</div>
