--- a/index.html
+++ b/index.html
@@ -112,16 +112,16 @@
     </div>
   
 
-    <script src="../services/grid.js"></script>
-    <script src = "../utils/confirmMsg.js"></script>
-    <script src="../services/cycleValidation.js"></script>
-    <script src="../services/sheetsHandling.js"></script>
-    <script src="../services/cell-properties.js"></script>
-    <script src="../services/cyclicPathTrace.js"></script>
-    <script src="../services/formula.js"></script>
-    <script src="../services/cutCopyPaste.js"></script>
+    <script src="./grid.js"></script>
+    <script src = "./confirmMsg.js"></script>
+    <script src="./cycleValidation.js"></script>
+    <script src="./sheetsHandling.js"></script>
+    <script src="./cell-properties.js"></script>
+    <script src="./cyclicPathTrace.js"></script>
+    <script src="./formula.js"></script>
+    <script src="./cutCopyPaste.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
-    <script src="../services/openSave.js"></script>
+    <script src="./openSave.js"></script>
  
 </body>
 </html>
